Fix broken layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,23 +16,6 @@ h1, h2 {
   color: white;
   margin: 0;
 }
-@media(max-width: 960px) {
-  body {
-    zoom: 0.5;
-  }
-}
-
-@media(min-width: 1920px) {
-  body {
-    zoom: 2;
-  }
-}
-
-@media(min-width: 2560px) {
-  body {
-    zoom: 3;
-  }
-}
 
 a {
   text-decoration: none;
@@ -56,6 +39,8 @@ pre {
 .game-content {
   background-color: black;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 /*Thanks to Keith Clark
@@ -145,9 +130,6 @@ http://codepen.io/keithclark/pen/zqcEd
 }
 
 #main {
-  /* final aspect ratio 16:10 and resolution 1920x1200 */
-  width: 960px;
-  height: 600px;
   position: relative;
 }
 
@@ -158,8 +140,12 @@ http://codepen.io/keithclark/pen/zqcEd
   align-content: center;
   align-items: center;
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+}
+
+.worldSelect h1 {
+  flex: 0.5
 }
 
 h1 {
@@ -172,7 +158,7 @@ h1 {
 }
 
 .menu .characters {
-  flex: 2;
+  margin-bottom: 10px;
 }
 
 .menu .character {
@@ -181,12 +167,9 @@ h1 {
 }
 
 .menu .playerNames {
-  flex: 2.5;
   display: flex;
-  flex-direction: row;
   align-content: center;
   align-items: stretch;
-  width: 100%
 }
 
 .logo {
@@ -197,11 +180,11 @@ h1 {
   border: 6px solid silver;
   color: silver;
   background-color: rgba(0, 0, 0, 0.8);
-  flex: 1;
   padding: 26px;
-  margin: 3rem;
+  margin: 0 3rem;
   font-size: 2rem;
   font-family: inherit;
+  height: 50px;
 }
 
 .progress-bar {
@@ -229,8 +212,7 @@ h1 {
 }
 
 .menu ul {
-  flex: 2;
-  margin: 0;
+  margin: 0 0 20px;
   padding: 0;
   list-style: none;
   text-align: center;
@@ -254,13 +236,15 @@ h1 {
 }
 
 .worldSelect {
-
+  height: 100vh;
 }
+
 .worldSelect ul li {
   flex: 1;
   padding: 16px;
   margin: 16px;
   border: 8px solid cornflowerblue;
+  max-height: 400px;
 }
 
 .worldSelect ul li a {
@@ -352,7 +336,7 @@ html {
   display: flex;
   flex: 1;
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -385,6 +369,7 @@ nav ul {
   padding: 8px;
   display: block;
   overflow: hidden;
+  font-size: 1.5rem;
 }
 
 .game .header {
@@ -611,5 +596,10 @@ nav ul {
 }
 
 marquee {
-  padding: 8px 0;
+  margin-top: 3rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  padding: 2rem 0 0;
 }
